2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* pppd/Makefile.am: Reflect having moved automake/.
	* rtems_servers/Makefile.am: Reflect having moved automake/.
	* rtems_telnetd/Makefile.am: Reflect having moved automake/.
	* rtems_webserver/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* .cvsignore, Makefile.am, pppd/Makefile.am,
	rtems_servers/Makefile.am, rtems_telnetd/Makefile.am,
	rtems_webserver/Makefile.am, wrapup/Makefile.am:
	Reflect having merged configure.ac into ../configure.ac

2003-06-13	Joel Sherrill <joel@OARcorp.com>

	* pppd/chat.c: Removed warnings.

2003-05-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 397/pppd
	* pppd/fsm.c: Make peer_mru global again.

2003-05-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* pppd/magic.c: Remove *rand48.
	* pppd/chap.c: Remove prototypes of *rand48.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* rtems_webserver/cgi.c, rtems_webserver/sockGen.c,
	rtems_webserver/umui.c, rtems_webserver/websSSL.c,
	rtems_webserver/websSSL.h, rtems_webserver/websda.c,
	rtems_webserver/websda.h: New files. Not included in previous commit.

2002-04-10	Mike Siers <mikes@poliac.com>

	* rtems_webserver/NOTES, rtems_webserver/asp.c,
	rtems_webserver/balloc.c, rtems_webserver/default.c,
	rtems_webserver/ej.h, rtems_webserver/ejIntrn.h,
	rtems_webserver/ejlex.c, rtems_webserver/ejparse.c,
	rtems_webserver/emfdb.c, rtems_webserver/emfdb.h,
	rtems_webserver/form.c, rtems_webserver/h.c,
	rtems_webserver/handler.c, rtems_webserver/license.txt,
	rtems_webserver/md5.h, rtems_webserver/md5c.c,
	rtems_webserver/mime.c, rtems_webserver/misc.c,
	rtems_webserver/ringq.c, rtems_webserver/rom.c,
	rtems_webserver/security.c, rtems_webserver/sock.c,
	rtems_webserver/sym.c, rtems_webserver/uemf.c,