@@ -4,5 +4,7 @@
 
 SUBDIRS = rtems_servers pppd rtems_telnetd rtems_webserver wrapup
 
+PREINSTALL_FILES =
+
 include $(top_srcdir)/automake/subdirs.am
 include $(top_srcdir)/automake/local.am
