@@ -32,15 +32,22 @@ endif
 
 .PRECIOUS: $(LIB)
 
-PREINSTALL_FILES = $(PROJECT_INCLUDE) \
-   $(include_HEADERS:%=$(PROJECT_INCLUDE)/%) \
-   $(include_rtems_HEADERS:%=$(PROJECT_INCLUDE)/rtems/%)
+PREINSTALL_FILES =
 
-$(PROJECT_INCLUDE)/%.h: %.h
-	$(INSTALL_DATA) $< $@
-$(PROJECT_INCLUDE)/rtems:
-	@$(mkinstalldirs) $@
-$(PROJECT_INCLUDE)/rtems/%.h: %.h
-	$(INSTALL_DATA) $< $@
+$(PROJECT_INCLUDE)/$(dirstamp):
+	@$(mkinstalldirs) $(PROJECT_INCLUDE)
+	@: > $(PROJECT_INCLUDE)/$(dirstamp)
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/$(dirstamp)
+
+if HAS_NETWORKING
+$(PROJECT_INCLUDE)/rtems/$(dirstamp):
+	@$(mkinstalldirs) $(PROJECT_INCLUDE)/rtems
+	@: > $(PROJECT_INCLUDE)/rtems/$(dirstamp)
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/$(dirstamp)
+
+$(PROJECT_INCLUDE)/ftpd.h: ftpd.h $(PROJECT_INCLUDE)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/ftpd.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/ftpd.h
+endif
 
 include $(top_srcdir)/automake/local.am
