@@ -28,15 +28,27 @@ endif
 
 .PRECIOUS: $(LIB)
 
-EXTRA_DIST = auth.c ccp.c ccp.h chap.c chap.h chap_ms.c chap_ms.h \
-chat.c demand.c fsm.c fsm.h ipcp.c ipcp.h ipxcp.c ipxcp.h \
-lcp.c lcp.h magic.c magic.h md4.c md4.h md5.c md5.h options.c \
-patchlevel.h pathnames.h pppd.h rtemsdialer.h rtemsmain.c rtemspppd.c \
-rtemspppd.h sys-rtems.c upap.c upap.h utils.c
+EXTRA_DIST = auth.c ccp.c ccp.h chap.c chap.h chap_ms.c chap_ms.h chat.c \
+    demand.c fsm.c fsm.h ipcp.c ipcp.h ipxcp.c ipxcp.h lcp.c lcp.h magic.c \
+    magic.h md4.c md4.h md5.c md5.h options.c patchlevel.h pathnames.h \
+    pppd.h rtemsdialer.h rtemsmain.c rtemspppd.c rtemspppd.h sys-rtems.c \
+    upap.c upap.h utils.c
 
-PREINSTALL_FILES = $(PROJECT_INCLUDE) $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
+PREINSTALL_FILES =
 
-$(PROJECT_INCLUDE)/%.h: %.h
-	$(INSTALL_DATA) $< $@
+$(PROJECT_INCLUDE)/$(dirstamp):
+	@$(mkinstalldirs) $(PROJECT_INCLUDE)
+	@: > $(PROJECT_INCLUDE)/$(dirstamp)
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/$(dirstamp)
+
+if HAS_NETWORKING
+$(PROJECT_INCLUDE)/rtemspppd.h: rtemspppd.h $(PROJECT_INCLUDE)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtemspppd.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtemspppd.h
+
+$(PROJECT_INCLUDE)/rtemsdialer.h: rtemsdialer.h $(PROJECT_INCLUDE)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtemsdialer.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtemsdialer.h
+endif
 
 include $(top_srcdir)/automake/local.am
