@@ -1,3 +1,12 @@
+2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Reformat. Apply dirstamps to preinstallation.
+	* pppd/Makefile.am: Ditto.
+	* rtems_servers/Makefile.am: Ditto.
+	* rtems_telnetd/Makefile.am: Ditto.
+	* rtems_webserver/Makefile.am: Ditto.
+	* wrapup/Makefile.am: Ditto.
+
 2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Reflect having moved automake/.
